--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,13 +1,14 @@
 [features]
 seeds = false
+skip-lint = false
 [programs.localnet]
-crowdfunding = "A3TZnN9WmNvMXSfQmuC3SDGYBb8eYMafXgmyeScYBrJJ"
+crowdfunding = "CX2wKrnUCwmu3AALGr3BMN4PHoQ764bcgrzUR3qPHrAi"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.apr.dev"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "./id.json"
 
 [scripts]
